k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-aggregator
  namespace: flight-aggregator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flight-aggregator
  template:
    metadata:
      labels:
        app: flight-aggregator
    spec:
      containers:
        - name: api
          image: ghcr.io/gerindt/goflight:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
